--- a/build.yaml
+++ b/build.yaml
@@ -16,7 +16,7 @@ include:
   - board: nice_nano
     shield: pskeeb5_left
   - board: nice_nano
-    shield: pskeeb_right
+    shield: pskeeb5_right
     # snippet: zmk-usb-logging
   - board: nice_nano
     shield: settings_reset
