--- a/build.yaml
+++ b/build.yaml
@@ -17,7 +17,7 @@ include:
     shield: pskeeb5_left
   - board: nice_nano_v2
     shield: pskeeb5_right
-    # snippet: zmk-usb-logging
+    snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: settings_reset
 # include:
